@@ -1,4 +1,4 @@
-# Copyright (C) 2002 Johan Hoffman and Anders Logg.
+# Copyright (C) 2005 Johan Hoffman and Anders Logg.
 # Licensed under the GNU GPL Version 2.
 #
 # The bilinear form a(u,v) and linear form L(v) for
