@@ -1,3 +1,4 @@
+ - Use interpolation function automatically generated by FFC
  - Put computation of map into class AffineMap
  - Clean up assembly
  - Use dof maps automatically generated by FFC (experimental)
